--- a/index.html
+++ b/index.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Daily Qoutes</title>
+    <link rel="stylesheet" href="double.css">
 </head>
 <body>
-    <ul id="sports">
-        <li id="football">Football</li>
-        <li id="basketball">Basketball</li>
-        <li id="tennis">Tennis</li>
-        <li id="golf">Golf</li>
-    </ul>
-    <script src="project-1.js"></script>
+    <div class="container">
+        <div class="header">
+            <h2>Daily Motivational Qoutes</h2>
+        </div>
+        <div class="main-content">
+            <div class="text-area">
+                <span class="qoute">
+                    "I do the very best i knowhow - the very best i can; and i mean to keep on doing so until the end."
+                </span>
+            </div>
+            <div class="person">Abraham Lincoln</div>
+
+            <div class="button-area">
+                <button id="new-qoute">New Quote</button>
+            </div>
+        </div>
+    </div>
+    <script src="project-2.js"></script>
 </body>
 </html>
